Bug 432851 - Hard Disk Activity widget added to desktop displays no information
Summary: Hard Disk Activity widget added to desktop displays no information
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: System Monitor widgets (other bugs)
Version First Reported In: master
Platform: Other Linux
: NOR normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-02-12 12:16 UTC by Patrick Silva
Modified: 2021-02-16 15:57 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.21.1
Sentry Crash Report:


Attachments
screenshot (486.24 KB, image/png)
2021-02-12 12:16 UTC, Patrick Silva
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2021-02-12 12:16:54 UTC
Created attachment 135630 [details]
screenshot

Title says it all. Please see the attached screenshot taken while Dolphin copies data from one partition to another.

EXPECTED RESULT
Hard Disk Activity widget should work

SOFTWARE/OS VERSIONS
Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.21.80
KDE Frameworks Version: 5.79.0
Qt Version: 5.15.2
Graphics Platform: Wayland
Comment 1 Bug Janitor Service 2021-02-12 13:28:09 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/ksysguard/-/merge_requests/68
Comment 2 David Redondo 2021-02-15 10:30:22 UTC
Git commit ccca59fd112977eb66d1afb13e4c1813434a5c69 by David Redondo.
Committed on 12/02/2021 at 13:25.
Pushed by davidre into branch 'master'.

Fix sensors names of aggregate disk rates

These should be 'read' and 'write' instead of readRate and 'writeRate'.
This matches the old sensor names and what the applet expects.

M  +2    -2    plugins/global/disks/disks.cpp

https://invent.kde.org/plasma/ksysguard/commit/ccca59fd112977eb66d1afb13e4c1813434a5c69
Comment 3 David Redondo 2021-02-15 10:30:44 UTC
Git commit cf6195e9484c84b82b8affc8c01c236388be9d30 by David Redondo.
Committed on 15/02/2021 at 10:30.
Pushed by davidre into branch 'Plasma/5.21'.

Fix sensors names of aggregate disk rates

These should be 'read' and 'write' instead of readRate and 'writeRate'.
This matches the old sensor names and what the applet expects.


(cherry picked from commit ccca59fd112977eb66d1afb13e4c1813434a5c69)

M  +2    -2    plugins/global/disks/disks.cpp

https://invent.kde.org/plasma/ksysguard/commit/cf6195e9484c84b82b8affc8c01c236388be9d30