Fix sensors names of aggregate disk rates

These should be 'read' and 'write' instead of readRate and 'writeRate'.
This matches the old sensor names and what the applet expects.
BUG:432851